k8s/rag-chatbot/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: rag-chatbot-deployment
  labels:
    app: rag-chatbot
spec:
  replicas: 2
  selector:
    matchLabels:
      app: rag-chatbot
  template:
    metadata:
      labels:
        app: rag-chatbot
    spec:
      containers:
        - name: rag-chatbot
          image: joshdavidang/rag-chatbot:v1
          ports:
            - containerPort: 8080
